--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@uiw/react-codemirror": "^3.0.8",
+    "animate.css": "^4.1.1",
     "react": "^17.0.2",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
