--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.6.1",
+    "@types/react": "^17.0.8",
+    "@types/react-animate-on-scroll": "^2.1.2",
+    "@types/react-dom": "^17.0.5",
     "@uiw/react-codemirror": "^3.0.8",
     "animate.css": "^4.1.1",
     "mobx": "^6.3.2",
@@ -17,6 +22,7 @@
     "react-scripts": "4.0.3",
     "react-simple-typewriter": "^1.0.13",
     "styled-components": "^5.3.0",
+    "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -42,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.9"
   }
 }
