--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.5",
     "@uiw/react-codemirror": "^3.0.8",
     "animate.css": "^4.1.1",
+    "hamburger-react": "^2.4.1",
     "mobx": "^6.3.2",
     "mobx-react-lite": "^3.2.0",
     "react": "^17.0.2",
