--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-notifications-component": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-simple-typewriter": "^1.0.13",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-notifications-component": "^3.1.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9"
   }
