--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@types/react": "^17.0.8",
     "@types/react-animate-on-scroll": "^2.1.2",
     "@types/react-dom": "^17.0.5",
-    "@uiw/react-codemirror": "^3.0.8",
+    "@uiw/react-codemirror": "^3.0.10",
     "animate.css": "^4.1.1",
+    "auto-bind": "^4.0.0",
     "axios": "^0.21.1",
     "hamburger-react": "^2.4.1",
     "mobx": "^6.3.2",
