Added eslint & prettier

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,5 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
-  "extends": [
-    "plugin:react/recommended",
-    "airbnb",
-    "plugin:prettier/recommended"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  },
-  "plugins": ["react", "@typescript-eslint"],
+  "extends": ["react-app", "react-app/jest"],
   "rules": {
     "semi": 1,
     "no-continue": "off",
@@ -42,6 +25,7 @@
     "implicit-arrow-linebreak": "off",
     "react/prop-types": "off",
     "react-hooks/exhaustive-deps": "off",
-    "object-curly-spacing": ["warn", "always"]
+    "object-curly-spacing": ["warn", "always"],
+    "react/react-in-jsx-scope": "off"
   }
 }
