--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prepare": "husky install"
   },
   "prettier": {
-    "printWidth": 120,
+    "printWidth": 110,
     "tabWidth": 2,
     "semi": true,
     "singleQuote": true,
@@ -49,6 +49,7 @@
     "animate.css": "^4.1.1",
     "auto-bind": "^4.0.0",
     "axios": "^0.21.1",
+    "codemirror-minimap": "^1.0.6",
     "hamburger-react": "^2.4.1",
     "mobx": "^6.3.2",
     "mobx-react-lite": "^3.2.0",
@@ -61,6 +62,7 @@
     "react-scripts": "4.0.3",
     "react-simple-typewriter": "^1.0.13",
     "react-spinners": "^0.11.0",
+    "socket.io-client": "^4.1.3",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
