--- a/package.json
+++ b/package.json
@@ -50,11 +50,13 @@
     "auto-bind": "^4.0.0",
     "axios": "^0.21.1",
     "codemirror-minimap": "^1.0.6",
+    "devicon-react-svg": "^0.2.3",
     "hamburger-react": "^2.4.1",
     "mobx": "^6.3.2",
     "mobx-react-lite": "^3.2.0",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
+    "react-devicon": "^0.1.9",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-notifications-component": "^3.1.0",
