--- a/package.json
+++ b/package.json
@@ -35,10 +35,14 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.5.0",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.2",
+    "@mui/material": "^5.0.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@tinymce/tinymce-react": "^3.12.6",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
@@ -49,6 +53,7 @@
     "animate.css": "^4.1.1",
     "auto-bind": "^4.0.0",
     "axios": "^0.21.1",
+    "bootstrap": "5.1.1",
     "codemirror-minimap": "^1.0.6",
     "devicon-react-svg": "^0.2.3",
     "hamburger-react": "^2.4.1",
@@ -57,6 +62,7 @@
     "notistack": "^1.0.10",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-devicon": "^0.1.9",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
